# audido

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
audido-core/: Cargo.toml
audido-core/src/: app.rs  browser.rs  commands.rs  engine.rs  lib.rs  metadata.rs  queue.rs  source.rs
audido-core/src/dsp/: dsp_graph.rs  eq.rs  mod.rs  normalization.rs  pitch_detection.rs
audido-macros/: Cargo.toml
audido-tui/: Cargo.toml  setup.iss
audido-tui/src/: logger.rs  macros.rs  main.rs  router.rs  state.rs  ui.rs
audido-tui/src/routes/: browser.rs  eq.rs  log.rs  mod.rs  playback.rs  queue.rs  settings.rs
audido-tui/src/states/: audio.rs  browser.rs  eq.rs  mod.rs  normalizer.rs  queue.rs  settings.rs
audido-tui/wix/: main.wxs
