[package]
name = "audido-core"
version = "0.1.0"
edition = "2024"

[dependencies]
biquad = "0.5.0"
realfft = "3.5.0"
rodio = "0.21.1"
rubato = "1.0.0"
rustfft = "6.4.1"
symphonia = "0.5.5"
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = "2.0.18"
crossbeam-channel = "0.5.15"
youtube_dl = "0.10.0"

